@@ -1,3 +1,6 @@
+2019.	[tuning]	Reduce the amount of work performed per quantum
+			when cleaning the cache. [RT #15986]
+
 2018.	[bug]		Checking if the HMAC MD5 private file was broken.
 			[RT #15960]
 
